Fix bug 427617 - ics import fails if event has RDATE property with value type PERIOD (worked in 0.7). r=philipp